# Project_Archivist

./: LICENSE  README.md  agent.py  llama_server_controller.py  main.py  model.py  pyproject.toml  settings.py  webui.py
agent/Archivist/: Archivist.json  workflow.json
apps/: webui.py
archivist/: message_manager.py
archivist/configs/: settings.py
archivist/nodes/: agent.py  node_handler.py  string.py
archivist/nodes/Conversation/: conversation.py
archivist/nodes/LLM/: llama_server_model.py
archivist/nodes/trigger_events/: on_message.py
archivist/nodes/webui/: send_message.py
archivist/static/: agents.js  main.js
archivist/templates/: main.html
archivist/webui/: agent.py  agent_tab.py  workflow_manager.py
modules/: message_manager.py
nodes/: agent.py  node_handler.py  string.py
nodes/Conversation/: conversation.py
nodes/LLM/: llama_server_model.py
nodes/trigger_events/: on_message.py
nodes/webui/: send_message.py
role/Archivist/: Archivist.json  Archivist_instruct.txt
static/: agent.css  agents.js  chat.css  chat.js  main.css  script.js  style.css
templates/: index.html  main.html
tests/: test_conversation.py  test_vector.py
webui/: agent.py  agent_tab.py  workflow_manager.py
