[project]
name = "project-archivist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "markdown>=3.9",
    "pandas>=2.3.2",
    "psutil>=7.1.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
]
